--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.organization=ditrit
 sonar.projectName=shoset
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
-sonar.exclusions**/test/test.go
+sonar.exclusions=**/test/**
+
