add more constructed tests and enable multiprocess to test

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,18 @@
 !**/*.pem
 !**/*.dot
 !**/*.svg
+!**/*.sh
 !**/
+!./test/*
+!**/.vscode/*
+!**/doc/*.md
+!**/doc/img/*.png
 
 !/.gitignore
 !/go.mod
 !/go.sum
 !/LICENSE
 !/README.md
+!/Dockerfile
 
 vendor
